Fix horizontal scroll issue

--- a/components/About/About.module.scss
+++ b/components/About/About.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding: 7rem 0;
 }
 
 .seperator {
